[tool.poetry]
name = "Dex-Starr"
version = "0.1.0"
description = "Helps sort and organize your comic collection by using the information stored in ComicInfo files."
license = "GPL-3.0-or-later"
authors = ["Buried-In-Code <BuriedInCode@tuta.io>"]
maintainers = ["Buried-In-Code <BuriedInCode@tuta.io>"]
readme = "README.md"
repository = "https://github.com/Buried-In-Code/Dex-Starr"
documentation = "https://foiled-again.readthedocs.io/en/latest/"
packages = [
	{ include = "DexStarr" }
]
include = [
	{ path = "tests", format = "sdist" }
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Topic :: Utilities",
	"Topic :: Other/Nonlisted Topic",
	"Typing :: Typed"
]
keywords = ["comics", "comic", "metadata", "tagging", "tagger"]

[tool.poetry.dependencies]
python = "^3.8"
Painted-Logger = "^1.3.1"
"ruamel.yaml" = "^0.17.16"
titlecase = "^2.3"
requests = "^2.26.0"
ratelimit = "^2.2.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.3"
patool = "^1.12"
colorama = "^0.4.4"
mokkari = "^1.0.2"
simyan = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
tox = "^3.25.1"
pre-commit = "^2.15.0"
pyupgrade = "^2.29.0"
black = "^21.9b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
seed-isort-config = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
Dex-Starr = 'DexStarr.__main__:main'

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Buried-In-Code/Dex-Starr/issues"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = ["Simyan", "bs4", "colorama", "mokkari", "painted_logger", "patoolib", "pytest", "ratelimit", "requests", "ruamel", "titlecase"]

[tool.coverage.run]
source = ["DexStarr"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = ["--cov", "-x"]

