[tool.poetry]
name = "Dex-Starr"
version = "0.2.0"
description = "Unify and organize your comic collection."
license = "GPL-3.0-or-later"
authors = ["Buried-In-Code <BuriedInCode@tuta.io>"]
maintainers = ["Buried-In-Code <BuriedInCode@tuta.io>"]
readme = "README.md"
repository = "https://github.com/Buried-In-Code/Dex-Starr"
packages = [
	{ include = "dex_starr" }
]
include = [
	{ path = "tests", format = "sdist" }
]
classifiers = [
	"Development Status :: 5 - Alpha",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Natural Language :: English",
	"Operating System :: MacOS",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: POSIX :: Linux",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Typing :: Typed"
]
keywords = ["comics", "comic", "metadata", "tagging", "tagger"]

[tool.poetry.dependencies]
python = "^3.8"
esak = "^1.3.1"
himon = "^0.1.1"
mokkari = "^2.3.0"
pathvalidate = "^2.5.0"
patool = "^1.12"
py7zr = "^0.19.0"
pydantic = "^1.9.1"
ratelimit = "^2.2.1"
requests = "^2.28.1"
rich = "^12.5.1"
"ruamel.yaml" = "^0.17.21"
simyan = "^0.10.0"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
tox = "^3.25.1"
tox-pyenv = "^1.1.0"

[tool.poetry.scripts]
Dex-Starr = "dex_starr.__main__:main"

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/Buried-In-Code/Dex-Starr/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = []

[tool.coverage.run]
source = ["dex_starr"]

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
addopts = ["--cov", "-x"]
